Create ractive subcommand

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,5 +17,11 @@
   "strict": true,
   "trailing": true,
   "smarttabs": true,
-  "white": true
+  "white": true,
+  "predef": {
+    "before",
+    "beforeEach",
+    "describe",
+    "it"
+  },
 }
